# COMP6940-A2

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/curated/: model_comparison.csv
part1_gpu_weibull/: README.md  part1_gpu_weibull.ipynb
part2_classification/: 01_ingest_clean.ipynb  02_model_interpret.ipynb  README.md
