[project]
name = "comp6940-a2"
version = "0.1.0"
description = "COMP6940 Assignment 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jax>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "xgboost>=3.2.0",
]
